[gd_scene load_steps=7 format=4 uid="uid://bhyrxbklu4wxe"]

[ext_resource type="Script" path="res://tile-based-movement/tile-movement-base.gd" id="1_rjy81"]
[ext_resource type="Script" path="res://main.gd" id="1_v0do8"]
[ext_resource type="TileSet" uid="uid://exqw7edp317d" path="res://tile-based-movement/test/tiles/test.tres" id="2_ugi40"]
[ext_resource type="Script" path="res://tile-based-movement/tile-outline-layer.gd" id="4_3mvij"]
[ext_resource type="Script" path="res://addons/MapCamera2d/MapCamera2D.gd" id="4_l0t08"]
[ext_resource type="PackedScene" uid="uid://cx1w14kil1hxx" path="res://tile-based-movement/Player.tscn" id="5_p148b"]

[node name="Main" type="Node2D"]
script = ExtResource("1_v0do8")

[node name="TileMovementBase" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7//z/AgAVAAQAAAD7//3/AgAVAAQAAAD7//7/AgAVAAQAAAD7////AgAVAAQAAAD7/wAAAgAVAAQAAAD7/wEAAgAVAAQAAAD7/wIAAgAVAAQAAAD7/wMAAgAVAAQAAAD7/wQAAgAVAAQAAAD8//z/AgAVAAQAAAD8//3/AgAVAAQAAAD8//7/AgAVAAQAAAD8////AgAVAAQAAAD8/wAAAgAVAAQAAAD8/wEAAgAVAAQAAAD8/wIAAgAVAAQAAAD8/wMAAgAVAAQAAAD8/wQAAgAVAAQAAAD9//z/AgAVAAQAAAD9//3/AgAVAAQAAAD9//7/AgAVAAQAAAD9////AgAVAAQAAAD9/wAAAgAVAAQAAAD9/wEAAgAVAAQAAAD9/wIAAgAVAAQAAAD9/wMAAgAVAAQAAAD9/wQAAgAVAAQAAAD+//z/AgAVAAQAAAD+//3/AgAVAAQAAAD+//7/AgAVAAQAAAD+////AgAVAAQAAAD+/wAAAgAVAAQAAAD+/wEAAgAVAAQAAAD+/wIAAgAVAAQAAAD+/wMAAgAVAAQAAAD+/wQAAgAVAAQAAAD///z/AgAVAAQAAAD///3/AgAVAAQAAAD///7/AgAVAAQAAAD/////AgAVAAQAAAD//wAAAgAVAAQAAAD//wEAAgAVAAQAAAD//wIAAgAVAAQAAAD//wMAAgAVAAQAAAD//wQAAgAVAAQAAAAAAPz/AgAVAAQAAAAAAP3/AgAVAAQAAAAAAP7/AgAVAAQAAAAAAP//AgAVAAQAAAAAAAAAAgAVAAQAAAAAAAEAAgAVAAQAAAAAAAIAAgAVAAQAAAAAAAMAAgAVAAQAAAAAAAQAAgAVAAQAAAABAPz/AgAVAAQAAAABAP3/AgAVAAQAAAABAP7/AgAVAAQAAAABAP//AgAVAAQAAAABAAAAAgAVAAQAAAABAAEAAgAVAAQAAAABAAIAAgAVAAQAAAABAAMAAgAVAAQAAAABAAQAAgAVAAQAAAACAPz/AgAVAAQAAAACAP3/AgAVAAQAAAACAP7/AgAVAAQAAAACAP//AgAVAAQAAAACAAAAAgAVAAQAAAACAAEAAgAVAAQAAAACAAIAAgAVAAQAAAACAAMAAgAVAAQAAAACAAQAAgAVAAQAAAADAPz/AgAVAAQAAAADAP3/AgAVAAQAAAADAP7/AgAVAAQAAAADAP//AgAVAAQAAAADAAAAAgAVAAQAAAADAAEAAgAVAAQAAAADAAIAAgAVAAQAAAADAAMAAgAVAAQAAAADAAQAAgAVAAQAAAAEAPz/AgAVAAQAAAAEAP3/AgAVAAQAAAAEAP7/AgAVAAQAAAAEAP//AgAVAAQAAAAEAAAAAgAVAAQAAAAEAAEAAgAVAAQAAAAEAAIAAgAVAAQAAAAEAAMAAgAVAAQAAAAEAAQAAgAVAAQAAAAFAPz/AgAVAAQAAAAFAP3/AgAVAAQAAAAFAP7/AgAVAAQAAAAFAP//AgAVAAQAAAAFAAAAAgAVAAQAAAAFAAEAAgAVAAQAAAAFAAIAAgAVAAQAAAAFAAMAAgAVAAQAAAAFAAQAAgAVAAQAAAD6//z/AgAVAAQAAAD6//3/AgAVAAQAAAD6//7/AgAVAAQAAAD6////AgAVAAQAAAD6/wAAAgAVAAQAAAD6/wEAAgAVAAQAAAD6/wIAAgAVAAQAAAD6/wMAAgAVAAQAAAD6/wQAAgAVAAQAAAD6//v/AgAVAAQAAAD7//v/AgAVAAQAAAD8//v/AgAVAAQAAAD9//v/AgAVAAQAAAD+//v/AgAVAAQAAAD///v/AgAVAAQAAAAAAPv/AgAVAAQAAAABAPv/AgAVAAQAAAACAPv/AgAVAAQAAAADAPv/AgAVAAQAAAAEAPv/AgAVAAQAAAAFAPv/AgAVAAQAAAD6/wUAAgAVAAQAAAD7/wUAAgAVAAQAAAD8/wUAAgAVAAQAAAD9/wUAAgAVAAQAAAD+/wUAAgAVAAQAAAD//wUAAgAVAAQAAAAAAAUAAgAVAAQAAAABAAUAAgAVAAQAAAACAAUAAgAVAAQAAAADAAUAAgAVAAQAAAAEAAUAAgAVAAQAAAAFAAUAAgAVAAQAAAD6//f/AgACAAQAAAD6//j/AgACAAUAAAD6//n/AgACAAYAAAD6//r/AgACAAcAAAD7//f/AgACAAQAAAD7//j/AgACAAUAAAD7//n/AgACAAYAAAD7//r/AgACAAcAAAD8//f/AgACAAQAAAD8//j/AgACAAUAAAD8//n/AgACAAYAAAD8//r/AgACAAcAAAD9//f/AgACAAQAAAD9//j/AgACAAUAAAD9//n/AgACAAYAAAD9//r/AgACAAcAAAD+//f/AgACAAQAAAD+//j/AgACAAUAAAD+//n/AgACAAYAAAD+//r/AgACAAcAAAD///f/AgACAAQAAAD///j/AgACAAUAAAD///n/AgACAAYAAAD///r/AgACAAcAAAAAAPf/AgACAAQAAAAAAPj/AgACAAUAAAAAAPn/AgACAAYAAAAAAPr/AgACAAcAAAABAPf/AgACAAQAAAABAPj/AgACAAUAAAABAPn/AgACAAYAAAABAPr/AgACAAcAAAACAPf/AgACAAQAAAACAPj/AgACAAUAAAACAPn/AgACAAYAAAACAPr/AgACAAcAAAADAPf/AgACAAQAAAADAPj/AgACAAUAAAADAPn/AgACAAYAAAADAPr/AgACAAcAAAAEAPf/AgACAAQAAAAEAPj/AgACAAUAAAAEAPn/AgACAAYAAAAEAPr/AgACAAcAAAAFAPf/AgAAAAMAAAAFAPj/AgAAAAQAAAAFAPn/AgAAAAUAAAAFAPr/AgAAAAYAAAAGAPf/AgABAAMAAAAGAPj/AgAAAAIAAAAGAPn/AgAAAAIAAAAGAPr/AgAAAAIAAAAGAPv/AgAAAAIAAAAGAPz/AgAAAAIAAAAGAP3/AgAAAAIAAAAGAP7/AgAAAAIAAAAGAP//AgAAAAIAAAAGAAAAAgAAAAIAAAAGAAEAAgAAAAIAAAAGAAIAAgAAAAIAAAAGAAMAAgAAAAIAAAAGAAQAAgAAAAIAAAAGAAUAAgAAAAIAAAA=")
tile_set = ExtResource("2_ugi40")
script = ExtResource("1_rjy81")

[node name="TileOutlineLayer" type="TileMapLayer" parent="TileMovementBase"]
tile_set = ExtResource("2_ugi40")
script = ExtResource("4_3mvij")

[node name="MapCamera2D" type="Camera2D" parent="."]
script = ExtResource("4_l0t08")
pan_speed = 0.0
pan_margin = 0.0
drag_inertia = 0.0

[node name="Player" parent="." instance=ExtResource("5_p148b")]

[connection signal="tile_clicked" from="TileMovementBase" to="." method="_on_tile_movement_base_tile_clicked"]
[connection signal="tile_clicked" from="TileMovementBase" to="Player" method="_on_tile_movement_base_tile_clicked"]
